Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ Temporary commit content 159
 Temporary commit content 190
 Temporary commit content 202
 Temporary commit content 212
+Temporary commit content 214
