Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -19,3 +19,4 @@ Temporary commit content 142
 Temporary commit content 163
 Temporary commit content 206
 Temporary commit content 217
+Temporary commit content 218
