Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -18,3 +18,4 @@ Temporary commit content 137
 Temporary commit content 142
 Temporary commit content 163
 Temporary commit content 206
+Temporary commit content 217
