Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,4 @@ Temporary commit content 247
 Temporary commit content 262
 Temporary commit content 266
 Temporary commit content 273
+Temporary commit content 296
