Optimized database queries

--- a/config.json
+++ b/config.json
@@ -12,3 +12,4 @@ Temporary commit content 88
 Temporary commit content 90
 Temporary commit content 99
 Temporary commit content 103
+Temporary commit content 121
