Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -13,3 +13,4 @@ Temporary commit content 90
 Temporary commit content 99
 Temporary commit content 103
 Temporary commit content 121
+Temporary commit content 131
