Updated project documentation

--- a/config.json
+++ b/config.json
@@ -9,3 +9,4 @@ Temporary commit content 61
 Temporary commit content 77
 Temporary commit content 78
 Temporary commit content 88
+Temporary commit content 90
