Added validation for user input

--- a/config.json
+++ b/config.json
@@ -25,3 +25,4 @@ Temporary commit content 251
 Temporary commit content 252
 Temporary commit content 256
 Temporary commit content 260
+Temporary commit content 288
