Added initial project plan

--- a/config.json
+++ b/config.json
@@ -17,3 +17,4 @@ Temporary commit content 131
 Temporary commit content 137
 Temporary commit content 142
 Temporary commit content 163
+Temporary commit content 206
