Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ Temporary commit content 212
 Temporary commit content 214
 Temporary commit content 220
 Temporary commit content 236
+Temporary commit content 247
