Enhanced UI responsiveness

--- a/config.json
+++ b/config.json
@@ -16,3 +16,4 @@ Temporary commit content 121
 Temporary commit content 131
 Temporary commit content 137
 Temporary commit content 142
+Temporary commit content 163
