Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -10,3 +10,4 @@ Temporary commit content 77
 Temporary commit content 78
 Temporary commit content 88
 Temporary commit content 90
+Temporary commit content 99
