Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ Temporary commit content 80
 Temporary commit content 81
 Temporary commit content 83
 Temporary commit content 100
+Temporary commit content 111
