Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ Temporary commit content 41
 Temporary commit content 56
 Temporary commit content 80
 Temporary commit content 81
+Temporary commit content 83
