Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ Temporary commit content 56
 Temporary commit content 80
 Temporary commit content 81
 Temporary commit content 83
+Temporary commit content 100
