--- a/config.json
+++ b/config.json
@@ -7,3 +7,4 @@ Temporary commit content 51
 Temporary commit content 52
 Temporary commit content 61
 Temporary commit content 77
+Temporary commit content 78
