--- a/config.json
+++ b/config.json
@@ -24,3 +24,4 @@ Temporary commit content 229
 Temporary commit content 251
 Temporary commit content 252
 Temporary commit content 256
+Temporary commit content 260
