--- a/config.json
+++ b/config.json
@@ -22,3 +22,4 @@ Temporary commit content 217
 Temporary commit content 218
 Temporary commit content 229
 Temporary commit content 251
+Temporary commit content 252
