Updated project documentation

--- a/config.json
+++ b/config.json
@@ -26,3 +26,4 @@ Temporary commit content 252
 Temporary commit content 256
 Temporary commit content 260
 Temporary commit content 288
+Temporary commit content 290
