Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ Temporary commit content 190
 Temporary commit content 202
 Temporary commit content 212
 Temporary commit content 214
+Temporary commit content 220
