Updated README with new features

--- a/config.json
+++ b/config.json
@@ -5,3 +5,4 @@ Temporary commit content 31
 Temporary commit content 50
 Temporary commit content 51
 Temporary commit content 52
+Temporary commit content 61
