Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ Temporary commit content 81
 Temporary commit content 83
 Temporary commit content 100
 Temporary commit content 111
+Temporary commit content 119
