Refactored code for better readability

--- a/config.json
+++ b/config.json
@@ -14,3 +14,4 @@ Temporary commit content 99
 Temporary commit content 103
 Temporary commit content 121
 Temporary commit content 131
+Temporary commit content 137
